# teemlab

./: .gitignore  CLAUDE.md  CONSTITUTION-DEV.md  CONSTITUTION-SIM.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  about.hbs  about.toml  flake.nix
.github/workflows/: pages.yml  release.yml
assets/fonts/: DejaVuSans-LICENSE.txt
benches/: throughput.rs
docs/: book.toml  editor.md  nutrients-t2-plan.md  p5-breeding-plan.md  persistent-ecosystems.md
docs/src/: SUMMARY.md  development.md  editor.md  getting-started.md  introduction.md  laws.md  recording.md  scenario-format.md  scenarios.md
docs/src/model/: brains.md  economy.md  genes.md  interactions.md  nutrients.md  regimes.md  the-loop.md
docs/theme/: custom.css
scenarios/: cerveau_mlp.ron  chasse.ron  cohabitation.ron  crowded.ron  default.ron  empty.ron  evolution.ron  flora.ron  flore.ron  hunt.ron  hunter_vs_wanderer.ron  minerals.ron  mlp_brain.ron  nutrients.ron  predation.ron  predator_prey.ron  proie_predateur.ron  selection.ron
scenarios/examples/: 01_default.ron  02_nutrients.ron  03_flora.ron  04_evolution.ron  05_hunt.ron  06_cohabitation.ron  07_mlp_brain.ron  08_mlp_train.ron  09_mlp_evolved.ron  10_predator_prey.ron  11_factions.ron  12_nutrient_web.ron  13_mlp_breed.ron  14_battle_breed.ron  15_red_queen.ron  cohabitation.ron  coldstart.ron  default.ron  empty.ron  evolution.ron  factions.ron  flora.ron  hunt.ron  hunter_vs_wanderer.ron  mlp_brain.ron  mlp_evolved.ron  mlp_train.ron  new_scenario.ron  nutrient_web.ron  nutrients.ron  predator_prey.ron
species/: chasseur.ron  hunter.ron
species/examples/: hunter.ron  mlp_trained.ron
src/: brain.rs  breeding.rs  components.rs  config.rs  controls.rs  dashboard.rs  dataviz.rs  ecology.rs  editor.rs  files.rs  fonts.rs  genotype.rs  help.rs  hud.rs  inspector.rs  interaction.rs  lib.rs  main.rs  metrics.rs  movement.rs  nutrients.rs  panels.rs  recorder.rs  rng.rs  runs.rs  selection.rs  snapshot.rs  spawn.rs  status.rs  visuals.rs
tests/: breeding.rs  captured_brain.rs  cohabitation.rs  containment.rs  flight.rs  flora.rs  hunter.rs  mlp.rs  nutrients.rs  predator_prey.rs  recycling.rs  reproduction.rs  snapshot.rs  trophic.rs
tests/common/: mod.rs
