[package]
name = "teemlab"
version = "0.1.0"
edition = "2024"
description = "Evolutionary simulation engine — one engine, many scenarios."

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
# Minimal, headless-safe feature set. Avian's defaults pull in bevy_picking /
# bevy_scene / debug-plugin integrations whose systems require resources that
# only exist under DefaultPlugins — they panic under MinimalPlugins (headless).
# We only need 2D, f32 colliders (parry) and the parallel solver.
avian2d = { version = "0.6", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
] }

# Scenario = external data. RON rather than JSON: comments, named types, hex
# literals — a scenario file that is readable and annotatable by hand. serde and
# ron are already pulled in transitively by Bevy (no new resolution).
serde = { version = "1", features = ["derive"] }
ron = "0.12"
bevy_egui = "0.39"

# Build ergonomics (standard Bevy advice): our crate at -O1 for fast rebuilds,
# dependencies fully optimized so the simulation runs at a usable speed even in
# debug builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
