[package]
name = "teemlab"
version = "0.1.0"
edition = "2024"
description = "Evolutionary simulation engine — one engine, many scenarios."

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
# Minimal, headless-safe feature set. Avian's defaults pull in bevy_picking /
# bevy_scene / debug-plugin integrations whose systems require resources that
# only exist under DefaultPlugins — they panic under MinimalPlugins (headless).
# We only need 2D, f32 colliders (parry) and the parallel solver.
avian2d = { version = "0.6", default-features = false, features = [
    "2d",
    "f32",
    "parry-f32",
    "parallel",
] }

# Scenario = external data. RON rather than JSON: comments, named types, hex
# literals — a scenario file that is readable and annotatable by hand. serde and
# ron are already pulled in transitively by Bevy (no new resolution).
serde = { version = "1", features = ["derive"] }
ron = "0.12"
bevy_egui = "0.39"

# Build ergonomics (standard Bevy advice): our crate at -O1 for fast rebuilds,
# dependencies fully optimized so the simulation runs at a usable speed even in
# debug builds.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Distribution profile — what the release CI (`.github/workflows/release.yml`)
# builds. Tuned for maximum *runtime* performance (the project's priority), at the
# cost of slow link times. Kept separate from `release` on purpose: `play
# --release` and local `cargo build --release` stay quick to link, while only the
# tagged release pays for fat LTO + a single codegen unit. The portable CPU floor
# (x86-64-v3 on x86_64) is set via RUSTFLAGS in the workflow, not here, so it never
# leaks into a developer's native build.
[profile.dist]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Profiling profile — an optimized build (like `release`) but WITH debug symbols
# and no stripping, so `flame` / `cargo flamegraph --profile profiling` produces
# readable stacks. Distinct from `dist` (which strips and aborts on panic) and from
# `release` (no debug info).
[profile.profiling]
inherits = "release"
debug = true
strip = false

[dev-dependencies]
# Throughput benchmark harness (benches/throughput.rs). Already resolved in
# Cargo.lock (transitively, 0.5.1), so this adds nothing new to the graph; it does
# NOT affect release binaries (dev-deps aren't compiled by `cargo build --bin`).
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false
